Updated PHP file that join form points to.

--- a/join.html
+++ b/join.html
@@ -62,7 +62,7 @@
       </div>
       <!-- Modal body -->
       <div class="modal-body col-6 mx-auto">
-        <form method="post" action="signin.php">
+        <form method="post" action="joingroup.php">
 		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
 		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
