Updated names on join.html to be group not user.

--- a/join.html
+++ b/join.html
@@ -63,8 +63,8 @@
       <!-- Modal body -->
       <div class="modal-body col-6 mx-auto">
         <form method="post" action="joingroup.php">
-		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
-		  <input type="password" name="User_Password" 
+		  <input type="text" name="Group_Name" class="modaluserpw" placeholder="Username">
+		  <input type="password" name="Group_Password" 
           class="modaluserpw" placeholder="Password">
 		  <input type="submit" name="login" class="login loginmodal-submit modaluserpw" value="Login">
 		</form>
