--- a/join.html
+++ b/join.html
@@ -62,9 +62,9 @@
       </div>
       <!-- Modal body -->
       <div class="modal-body col-6 mx-auto">
-        <form method="post" action="joingroup.php">
-		  <input type="text" name="Group_Name" class="modaluserpw" placeholder="Username">
-		  <input type="password" name="Group_Password" 
+        <form method="post" action="signin.php">
+		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
+		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
 		  <input type="submit" name="login" class="login loginmodal-submit modaluserpw" value="Login">
 		</form>
@@ -86,12 +86,12 @@
           <div id="form" class="col text-center px-3 py-3">
             Join Group
             <!-- form -->
-            <form>
+            <form method="post" action="joingroup.php">
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" class="form-control" id="usernameForm" placeholder="Group Name" autofocus required>
+                <input type="text" class="form-control" id="usernameForm" name="Group_Name" placeholder="Group Name" autofocus required>
               </div>
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="password" class="form-control" id="passwordForm" placeholder="Password" required>
+                <input type="password" class="form-control" id="passwordForm" placeholder="Password" name="Group_Password" required>
                 <div class="col px-0">
                   <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
                 </div>
