--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
 		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
-		  <input type="submit" name="login" class="login loginmodal-submit modaluserpw" value="Login">
+		  <input type="submit" name="login" class="modaluserpw login loginmodal-submit " value="Login">
 		</form>
     </div>
     </div>
@@ -74,7 +74,7 @@
 </div>
 
 <!-- background div -->
-<div class="loggedInBG container-fluid">
+<div class="registerBG container-fluid">
   <!-- main div container -->
   <div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4 title">
     <div class="row xs-12 text-left font-weight-bold">
