--- a/register.html
+++ b/register.html
@@ -63,7 +63,7 @@
       <!-- Modal body -->
       <div class="modal-body col-6 mx-auto">
         <form method="post" action="signin.php">
-		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
+		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username" autofocus>
 		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
 		  <input type="submit" name="login" class="modaluserpw login loginmodal-submit " value="Login">
