--- a/join.html
+++ b/join.html
@@ -108,7 +108,7 @@
 
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
-  <div class="container-fluid col-4 text-center my-auto">
+  <div class="container-fluid col-7 col-md-3 text-center my-auto">
     <h4>Links</h4>
     <div class="row pb-2">
       <div class="col-4">
@@ -126,6 +126,7 @@
       2018 &copy; Team Five
   </div>
 </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
