--- a/nogroups.html
+++ b/nogroups.html
@@ -113,37 +113,25 @@
 
 
 <!--- Footer -->
-<div>
-        <footer class="site-footer page-footer font-small pt-3 mt-4">
-            <div class="container-fluid text-center my-auto">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h5>links</h5><pre><a href="#">About    </a><a href="#">Sponsors    </a><a href="#">Connect</a>
-                      </pre>
-                        <!-- <ul class="list-unstyled">
-                            <li>
-                                <a href="#!">About</a>
-                            </li>
-                            <li>
-                                <a href="#!">Contact</a>
-                            </li>
-                            <li>
-                                <a href="#!">Sponsors</a>
-                            </li>
-                            <li>
-                                <a href="#!"></a>
-                            </li>
-                        </ul> -->
-                    </div>
-                </div>
-            </div>
-        
-            <div id="copyright" class="pt-1 text-center">
-                2018 &copy; Team Five
-            </div>
-        
-        </footer>
+<footer class="site-footer page-footer font-small pt-3">
+    <div class="container-fluid col-7 col-md-3 text-center my-auto">
+      <h4>Links</h4>
+      <div class="row pb-2">
+        <div class="col-4">
+          <a href="index.html">Home</a>
         </div>
+        <div class="col-4">
+          <a href="register.html">Signup</a>
+        </div>
+        <div class="col-4">
+          <a href="#" data-toggle="modal" data-target="#login">Login</a>
+        </div>
+      </div>
+    </div>
+    <div id="copyright" class="pt-1 text-center">
+        2018 &copy; Team Five
+    </div>
+  </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
