--- a/register.html
+++ b/register.html
@@ -87,7 +87,9 @@
               <div class="container-fluid w-100 mb-4">
                 <div class="row">
                   <div class="container col-xs-12 col-sm-10 col-md-10 col-lg-8 divBorder title">
-                    Sign Up
+                    <div class="pt-3">
+                      Sign Up
+                    </div>
               
             
             <!-- sign up form -->
@@ -115,13 +117,12 @@
                   </div>
                 </div>
               </form>
-              <br>
             </div>
           </div>
         </div>
         <div class="container-fluid w-100 mb-4">
             <div class="row">
-              <div class="container col-xs-12 col-sm-10 col-md-10 col-lg-8 divBorder title">
+              <div class="container col-xs-12 col-sm-10 col-md-10 col-lg-8 divBorder title pt-3">
             <!-- form for existing users -->
               <small><b>Already have an account? <br> 
                 Sign in:</b></small>
@@ -154,7 +155,7 @@
 
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
-  <div class="container-fluid col-4 text-center my-auto">
+  <div class="container-fluid col-7 col-md-3 text-center my-auto">
     <h4>Links</h4>
     <div class="row pb-2">
       <div class="col-4">
