made text box for description span multiple lines

--- a/create.html
+++ b/create.html
@@ -102,7 +102,7 @@
               </div>
               
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4" style="height: 100px;">
-                <input type="text" name="Group_Description" class="form-control" id="descriptionForm" placeholder="Description" required>
+                <textarea type="text" id="descriptionForm" class="form-control" rows ="5" name="Group_Description" placeholder="Description" required></textarea>
               </div>
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                 <select class="form-control" name="Group_Size" title="Number of people" id="totalPeople" required>
