--- a/create.html
+++ b/create.html
@@ -16,29 +16,33 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
-  <div class="container-fluid w-75">
-    <a class="navbar-brand" href="index.html"><img src="img/frontpage/logo/logo.png"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTop">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="createjoin.html">Groups</a>
-        </li>
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="register.html">Sign Up</a>
-        </li>
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
-        </li>
-      </ul>
+    <div class="container-fluid w-75">
+      <a class="navbar-brand" href="index.html"><img src="img/frontpage/logo/logo.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTop">
+        <ul class="navbar-nav ml-auto">
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="createjoin.html">Groups</a>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="register.html">Sign Up</a>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 <!-- The Modal -->
 <div class="modal fade" id="login">
   <div class="modal-dialog">
