--- a/index.html
+++ b/index.html
@@ -23,16 +23,20 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTop">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item mt-1">
+        <div class="dropdown-divider"></div>
+        <li class="nav-item my-0">
           <a class="nav-link" href="index.html">Home</a>
         </li>
-        <li class="nav-item mt-1">
+        <div class="dropdown-divider"></div>
+        <li class="nav-item my-0">
           <a class="nav-link" href="createjoin.html">Groups</a>
         </li>
-        <li class="nav-item mt-1">
+        <div class="dropdown-divider"></div>
+        <li class="nav-item my-0">
           <a class="nav-link" href="register.html">Sign Up</a>
         </li>
-        <li class="nav-item mt-1">
+        <div class="dropdown-divider"></div>
+        <li class="nav-item my-0">
           <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
         </li>
       </ul>
