--- a/register.html
+++ b/register.html
@@ -16,62 +16,33 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
-  <div class="container-fluid w-75">
-    <a class="navbar-brand" href="index.html"><img src="img/frontpage/logo/logo.png"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTop">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="createjoin.html">Groups</a>
-        </li>
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="register.html">Sign Up</a>
-        </li>
-        <li class="nav-item mt-1">
-          <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- The Modal -->
-<div class="modal fade" id="login">
-  <div class="modal-dialog">
-    <div class="modal-content">
-    <!-- Modal Header -->
-      <div class="modal-header mx-auto">
-          <div class="container mx-auto">
-              <div class="row">
-                <div class="col-2">
-                </div>
-                <div class="col-8 text-center">
-                   <h3>
-                     Login 
-                   </h3>
-                </div>
-                <div class="col-2">
-                    <button type="button" class="close text-right" data-dismiss="modal">&times;</button>
-                </div>
-              </div>
-              </div>
+    <div class="container-fluid w-75">
+      <a class="navbar-brand" href="index.html"><img src="img/frontpage/logo/logo.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTop">
+        <ul class="navbar-nav ml-auto">
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="createjoin.html">Groups</a>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="register.html">Sign Up</a>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item my-0">
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
+          </li>
+        </ul>
       </div>
-      <!-- Modal body -->
-      <div class="modal-body col-6 mx-auto">
-        <form method="post" action="signin.php">
-		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username" autofocus>
-		  <input type="password" name="User_Password" 
-          class="modaluserpw" placeholder="Password">
-		  <input type="submit" name="login" class="modaluserpw login loginmodal-submit " value="Login">
-		</form>
     </div>
-    </div>
-  </div>
-</div>
+</nav>
 
 <!-- background div -->
 <div class="registerBG container-fluid">
