--- a/create.html
+++ b/create.html
@@ -93,16 +93,16 @@
             <!-- form -->
             <form method="post" action="creategroup.php" onsubmit="return validate()">
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" class="form-control" id="groupNameForm" placeholder="Group Name" name="Group_Name" required autofocus>
+                <input type="text" class="form-control" id="groupNameForm" placeholder="Group Name" name="Group_Name" pattern="[a-zA-Z0-9]{4,20}" oninput="checkGroupName(this)"  required autofocus>
               </div>
             <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="password" name="Group_Password" class="form-control" id="groupPasswordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
+                <input type="password" name="Group_Password" class="form-control" id="groupPasswordForm" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"  oninput="checkPw(this)" required>
               </div>
 
             <!-- confirm password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="password" class="form-control" id="confirmGroupPasswordForm" placeholder="Confirm password" pattern="[a-zA-Z0-9]{8,20}" required>
+                <input type="password" class="form-control" id="confirmGroupPasswordForm" placeholder="Confirm password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" oninput="checkPw(this)" required>
               </div>
               
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4" style="height: 100px;">
