--- a/register.html
+++ b/register.html
@@ -71,7 +71,12 @@
 
                 <!-- password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="^(?pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" required>
+                  <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" oninput="checkPw(this)" required>
+                </div>
+
+                <!-- confirm password -->
+                <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+                  <input type="password" name="confirm_User_Password" class="form-control" id="confirmpasswordForm" placeholder="Confirm password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" required>
                 </div>
 
                 <!-- email -->
@@ -84,12 +89,7 @@
               </form>
             </div>
           </div>
-        </div>=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" oninput="checkPw(this)" required>
-                </div>
-
-                <!-- confirm password -->
-                <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="password" name="confirm_User_Password" class="form-control" id="confirmpasswordForm" placeholder="Confirm password" 
+        </div>
         <div class="container-fluid w-100 mb-4">
             <div class="row">
               <div class="container col-xs-12 col-sm-10 col-md-10 col-lg-8 divBorder title pt-3">
