added lebron james

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 <!-- three icons (get together, reduce waste, support locals) -->
 <div class="container col-lg-9 col-md-10 col-sm-11 col-xs-12">
   <div class="row">
+    <img src="img/lebron.jpg" id="A" alt="A"/>
     <!-- first ion -->
     <div class="col-12 col-md-4">
       <div class="card border-0">
@@ -138,7 +139,7 @@
     <!-- second icon -->
     <div class="col-12 col-md-4">
       <div class="card border-0">
-        <img class="icons card-img-top mx-auto" src="img/frontpage/icon/recycling.png" alt="Recycling and reduce waste">
+        <img class="icons card-img-top mx-auto" src="img/frontpage/icon/recycling.png" alt="Recycling and reduce waste" onclick="huehuehue()">
         <div class="card-body">
           <h5 class="card-title text-center">Reduce Waste</h5>
         </div>
