changed easter egg

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <!-- three icons (get together, reduce waste, support locals) -->
 <div class="container col-lg-9 col-md-10 col-sm-11 col-xs-12">
   <div class="row">
-    <img src="img/lebron.jpg" id="A" alt="A"/>
+    <img src="img/op.gif" id="A" alt="A"/>
     <!-- first ion -->
     <div class="col-12 col-md-4">
       <div class="card border-0">
