changed modal style in createjoin

--- a/join.html
+++ b/join.html
@@ -91,10 +91,10 @@
             Join Group
             <!-- form -->
             <form method="post" action="joingroup.php">
-              <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+              <div class="form-row   mx-auto my-4">
                 <input type="text" class="form-control" id="usernameForm" name="Group_Name" placeholder="Group Name" autofocus required>
               </div>
-              <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+              <div class="form-row   mx-auto my-4">
                 <input type="password" class="form-control" id="passwordForm" placeholder="Password" name="Group_Password" required>
                 <div class="col px-0">
                   <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
