--- a/create.html
+++ b/create.html
@@ -92,23 +92,23 @@
             
             <!-- form -->
             <form method="post" action="creategroup.php" onsubmit="return validate()">
-              <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+              <div class="form-row   mx-auto my-4">
                 <input type="text" class="form-control" id="groupNameForm" placeholder="Group Name" name="Group_Name" pattern="[a-zA-Z0-9]{4,20}" oninput="checkGroupName(this)"  required autofocus>
               </div>
             <!-- password -->
-              <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+              <div class="form-row   mx-auto my-4">
                 <input type="password" name="Group_Password" class="form-control" id="groupPasswordForm" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"  oninput="checkPw(this)" required>
               </div>
 
             <!-- confirm password -->
-              <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+              <div class="form-row   mx-auto my-4">
                 <input type="password" class="form-control" id="confirmGroupPasswordForm" placeholder="Confirm password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" oninput="checkPw(this)" required>
               </div>
               
-              <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4" style="height: 100px;">
+              <div class="form-row   mx-auto my-4" style="height: 100px;">
                 <textarea type="text" id="descriptionForm" class="form-control" rows ="5" name="Group_Description" placeholder="Description" required></textarea>
               </div>
-              <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+              <div class="form-row   mx-auto my-4">
                 <select class="form-control" name="Group_Size" title="Number of people" id="totalPeople" required>
                   <option value="" selected>Number of people</option>
                     <option value="1">1</option>
