added grey background to mission statement content

--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
   <p class="lead">An event generating service which allows individuals and groups to contribute to a pot and enjoy local activities together.</p>
 </div>
 
-
 <!-- three icons (get together, reduce waste, support locals) -->
 <div class="container col-lg-9 col-md-10 col-sm-11 col-xs-12">
   <div class="row">
@@ -158,9 +157,9 @@
 </div>
 
 <!--- Two Column Section (mission statement, video) -->
-<div class="row m-4 mx-auto col-lg-9 col-md-10 col-sm-11 col-xs-12">
+<div class="row m-4 mx-auto col-lg-9 col-md-10 col-sm-11 col-xs-12 greyBG">
   <!-- mission statement -->
-  <div class="textcenter col xs-12 lg-8">
+  <div class="textcenter col xs-12 lg-8 pt-3">
     <h2>Mission statement<small><br></small></h2>
     <p>While gift giving is well intentioned, we often miss the point: to create lasting memories with other people. 24% of all people believe most of the gifts they receive are useless junk. Each year, Canadians will throw out 540,000 tonnes of wrapping paper and gift bags. Our application, Memento takes all the money a group would have spent on gift-giving, aggregates a sum from anonymous personal budgets, and turns that sum it into a memorable experience. This not only reduces waste, but also supports local businesses and brings people together.</p>
   </div>
