--- a/createjoin.html
+++ b/createjoin.html
@@ -81,23 +81,83 @@
 <!-- background -->
 <header class="masthead d-flex">
   <!-- main div container -->
-  <div class="container text-center my-auto title">
+  <div class="container col-12  col-sm-9  col-md-8  col-lg-5 text-center mt-4 title">
     <h1 class="mb-5 createheading">Create a Memento</h1>
       <div class="row">
-        <div class="col-12 col-md-4 my-2">
+        <div class="col-12 col-sm-6 my-2">
             <button type="button" class="btn btn-primary btn-lg createjoin" data-toggle="modal" data-target="#createModal" style="background-color: #FFF; color: #1A75C1;">Create Group</button>
           <!-- <button type="button" onclick="location.href = 'create.html'" class="btn btn-primary btn-lg createjoin" style="background-color: #FFF; color: #1A75C1;">Create Group</button> -->
         </div>
-        <div class="col-12 col-md-4 my-2">
+        <div class="col-12 col-sm-6 my-2">
             <button type="button" class="btn btn-light btn-lg createjoin" data-toggle="modal" data-target="#joinModal" style="background-color: #1A75C1; color: #FFF;">Join Group</button>
           <!-- <button type="button" onclick="location.href = 'join.html'" class="btn btn-light btn-lg createjoin" style="background-color: #1A75C1; color: #FFF;">Join Group</button> -->
         </div>
-        <div class="col-12 col-md-4 my-2">
-          <button type="button" onclick="location.href = 'mygroups.html'" class="btn btn-light btn-lg createjoin" style="background-color: #FFF; color: #1A75C1;">My Groups</button>
+
+
+
+
+
+  </div>
+
+      <!-- main div container -->
+<div class="container-fluid divBorder mt-5">
+  <div id="main" class="container col-12 w-90 px-2 pt-4 title">
+    <div class="row xs-12 text-left font-weight-bold">
+      <div class="col">
+        <!-- signup form -->
+        <div class="container px-3 rounded mb-4">
+          <div class="row xs-12 text-left font-weight-bold">
+            <div id="title" class="col text-center mb-3">
+              My Groups
+            </div>
+          </div>
+          <div id="content" class="row xs-12">
+            <ul class="list-unstyled w-100">
+  
+              <div class="clickableDiv">
+                <a href="aboutgroup.html">
+                  <div id="firstGroup" class="row xs-12 mx-2">
+                    <li class="media">
+                      <img class="mr-2 mb-3" src="img/mygroups/suit.jpeg" alt="group picture 1">
+                      <div class="media-body">
+                        <h4 class="mt-0 mb-1">Coworkers</h4>
+                        <p>Year end celebration</p>
+                      </div>
+                    </li>
+                  </div>
+                </a>
+              </div>
+  
+              <div class="clickableDiv">
+                <a href="aboutgroup.html">
+                  <div id="secondGroup" class="row xs-12 mx-2">
+                    <li class="media">
+                      <img class="mr-2 mb-3" src="img/mygroups/seawall.jpeg" alt="group picture 1">
+                      <div class="media-body">
+                        <h4 class="mt-0 mb-1">Family</h4>
+                        <p>Rent bikes to go around seawall</p>
+                      </div>
+                    </li>
+                  </div>
+                </a>
+              </div>
+  
+            </ul>
+          </div>
         </div>
       </div>
+    </div>
   </div>
+  </div>
+
+
+
+
+      </div>
+      
 </header>
+
+
 
 <!-- Create Group Modal -->
 <div class="modal fade" id="createModal">
