created collapsable events

--- a/createjoin.html
+++ b/createjoin.html
@@ -85,7 +85,7 @@
     <h1 class="mb-5 createheading">Create a Memento</h1>
       <div class="row">
         <div class="col-12 col-sm-6 my-2">
-            <button type="button" class="btn btn-primary btn-lg createjoin" data-toggle="modal" data-target="#createModal" style="background-color: #FFF; color: #1A75C1;">Create Group</button>
+            <button type="button" class="btn btn-primary btn-lg createjoin" data-toggle="modal" data-target="#createModal" style="background-color: #FFF; color: #1A75C1; border-radius: 100px;">Create Group</button>
           <!-- <button type="button" onclick="location.href = 'create.html'" class="btn btn-primary btn-lg createjoin" style="background-color: #FFF; color: #1A75C1;">Create Group</button> -->
         </div>
         <div class="col-12 col-sm-6 my-2">
